--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
    <header class="header">
       <div class="logo">
-         <img src="media/icon/skillbridge.ng-removebg-preview (converted).png" alt="logo">
+         <img src="public/icons/skillbridge.ng-removebg-preview (converted).png" alt="logo">
          <a href="index.html">SkillBridge</a>
       </div>
       <nav class="nav">
@@ -497,7 +497,7 @@
       </section>
    </main>
    <footer class="footer">
-      <img src="media/icon/icon.svg" alt="skillbridge icon">
+      <img src="public/icons/skillbridge.ng-removebg-preview (converted).png" alt="skillbridge icon">
       <div class="sitemap">
          <h4 class="epilogue-semi-bold">Sitemap</h4>
          <a class="epilogue-rglr" href="">Home</a>
